scripts/seo/__tests__/fixtures/r-seo-09/negative/01-meta-canonical/head.tsx
import type { MetaFunction } from "@remix-run/node";

export const meta: MetaFunction = () => [
  { title: "Page" },
  { tagName: "link", rel: "canonical", href: "https://example.com/new-path" },
];

export default function Page() {
  return <div />;
}
